So far the only way of setting the password hint is by setting also the password. But there are several cases where setting the password isn't done through AccountsService, but still we want to set the password hint. For instance GDM setups the pasword for new used directly from PAM. This commit add a new function that allows to set the hint without changing the password.
Created attachment 114344 [details] [review] accountsservice: Add SetPasswordHint function The patch that adds this functionality
thanks, pushed. Attachment 114344 [details] pushed as 36b424b - accountsservice: Add SetPasswordHint function
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.